uploading old css.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,3 +14,9 @@ a {
 a:hover {
     color: #f3d22d;
 }
+main {
+    color: white;
+    text-align: center;
+    font-family:'Roboto',sans-serif;
+    padding-top: 2%;
+}
