--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,4 +18,7 @@ main {
     color: white;
     text-align: center;
     font-family:'Roboto',sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
