--- a/src/styles/homePage.module.css
+++ b/src/styles/homePage.module.css
@@ -1,6 +1,11 @@
 .homePage{
-    display: block;
+    display: flex;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    margin-top: 5%;
     width: 60vw;
 }
 .message{
