--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,17 +1,17 @@
 footer {
     text-align: center;
     color: white;
-    margin-right: 40px;
-    margin-bottom: 20px;
-    padding-top: 20px;
+    margin-top: 1.5%;
+    padding-top: 1%;
+    padding-bottom: 1%;
     width: 100%;
 }
 .links-footer {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 1%;
     color: white;
-    margin-bottom: 20px;
+    margin-bottom: 0.7%;
 }
 .instagram-icon, .facebook-icon, .google-icon {
     font-size: 35px;
