--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,6 +1,6 @@
 footer {
     text-align: center;
-    color: white;
+    color: rgb(255, 255, 255);
     margin-top: 1.5%;
     padding-top: 1%;
     padding-bottom: 1%;
