--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -3,62 +3,17 @@
     src: url('../../public/fonts/PermanentMarker-Regular.ttf');
 }
 header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    height: 15vh;
-    background-color: black;
-    font-family: 'Marker';
     position: sticky;
     z-index: 100;
-}
-nav{
+    top:0;
     display: flex;
-    flex-direction: row;
-    text-align: center;
     justify-content: center;
     align-items: center;
-}
-.nav-logo{
-    margin-top: 2%;
-    width: 100%;
-    height: 100%;
-}
-.nav-logo img{
-    width: 100%;
-    height: 100%;
-}
-.nav-bar{
-    display: flex;
-    flex-direction: row;
-    gap: 4%;
-    text-decoration: none;
-    list-style-type: none;
-    align-items: center;
-    justify-content: center;
     text-align: center;
+    height: 22vh;
+    background-color: black;
+    font-family: 'Marker';
 }
-.nav-link{
-    font-size: 28px;
-}
-.nav-li {
-    width: 250px;
-    margin-top: 6%;
-}
-.navigation{
-    width: 150px;
-}
-.navigation>a{
-    display: block;
-    width: 150px;
-    margin-top: 35%;
-}
-.home{
-    text-align: end;
-}
-.nav-logo{
-    width: 400px;
-}
+
 
 
