--- a/src/styles/RegisterPage.module.css
+++ b/src/styles/RegisterPage.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 2%;
   align-items: center;
   text-align: center;
 }
@@ -77,4 +76,5 @@ button:hover {
 
 .field {
   margin-top: 10%;
+  font-size: 16px;
 }
