--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Marker' ;
-    src: url('../../public/fonts/PermanentMarker-Regular.ttf');
+    src: url('../../../public/fonts/PermanentMarker-Regular.ttf');
 }
 header{
     position: sticky;
