--- a/src/styles/views/GalleryPage.module.css
+++ b/src/styles/views/GalleryPage.module.css
@@ -1,25 +1,33 @@
-.galleryPage{
-    font-family:'Roboto',sans-serif;
+.galleryPage {
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-align: center;
     max-width: 70%;
-    padding-left: 800px;
 }
-.img-gallery{
+
+.img-gallery {
     width: 80%;
     margin: 100px auto 50px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 30px;
 }
-.img-gallery img{
+
+.img-gallery img {
     width: 100%;
     cursor: pointer;
 }
-.img-gallery img:hover{
+
+.img-gallery img:hover {
     transform: rotate(-13deg);
     border-radius: 20px;
-    box-shadow: 0 32px 75px rgba(68,77,136, 0.2);
+    box-shadow: 0 32px 75px rgba(68, 77, 136, 0.2);
 }
-.full-img{
+
+.full-img {
     width: 100%;
     height: 100vh;
     background: rgba(0, 0, 0, 0.9);
@@ -31,12 +39,14 @@
     justify-content: center;
     z-index: 100;
 }
-.full-img img{
+
+.full-img img {
     width: 90%;
     max-width: 500px;
     border-radius: 20px;
 }
-.full-img span{
+
+.full-img span {
     position: absolute;
     top: 5%;
     right: 5%;
@@ -44,7 +54,8 @@
     color: white;
     cursor: pointer;
 }
-.full-img .delete{
+
+.full-img .delete {
     position: absolute;
     top: 5%;
     right: 8%;
@@ -52,6 +63,7 @@
     color: red;
     cursor: pointer;
 }
-.img-gallery>img{
+
+.img-gallery>img {
     border-radius: 20px;
 }
