--- a/src/styles/components/FullIScreenImage.module.css
+++ b/src/styles/components/FullIScreenImage.module.css
@@ -1,4 +1,4 @@
-.full-img {
+.model.open {
     width: 100%;
     height: 100vh;
     background: rgba(0, 0, 0, 0.9);
@@ -11,13 +11,13 @@
     z-index: 100;
 }
 
-.full-img img {
+.model.open img {
     width: 90%;
     max-width: 500px;
     border-radius: 20px;
 }
 
-.full-img span {
+.model.open span {
     position: absolute;
     top: 5%;
     right: 5%;
@@ -26,7 +26,7 @@
     cursor: pointer;
 }
 
-.full-img .delete {
+.model.open .delete {
     position: absolute;
     top: 5%;
     right: 8%;
