--- a/src/styles/views/GalleryPage.module.css
+++ b/src/styles/views/GalleryPage.module.css
@@ -8,3 +8,60 @@
     max-width: 70%;
 }
 
+.img-gallery {
+    width: 80%;
+    margin: 100px auto 50px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 30px;
+}
+
+.img-gallery img {
+    width: 100%;
+    object-fit: cover;
+    cursor: pointer;
+    border-radius: 2%;
+}
+
+.img-gallery img:hover {
+    transform: rotate(-9deg);
+    border-radius: 20px;
+    box-shadow: 0 32px 75px rgba(165, 169, 198, 0.2);
+}
+.model-open {
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    z-index: 100;
+}
+
+.model-open-img {
+    width: 90%;
+    max-width: 500px;
+    border-radius: 2%;
+}
+
+.model-open-x {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+}
+
+.model-open-delete {
+    position: absolute;
+    top: 5%;
+    right: 8%;
+    font-size: 30px;
+    color: #f3d22d;
+    cursor: pointer;
+}
