--- a/src/styles/views/GalleryPage.module.css
+++ b/src/styles/views/GalleryPage.module.css
@@ -50,18 +50,22 @@
 
 .model-open-x {
     position: absolute;
-    top: 5%;
+    top: 5.3%;
     right: 5%;
-    font-size: 30px;
+    font-size: 26px;
     color: white;
     cursor: pointer;
 }
 
 .model-open-delete {
+    font-size: 26px;
     position: absolute;
-    top: 5%;
-    right: 8%;
-    font-size: 30px;
-    color: #f3d22d;
+    top: 5.3%;
+    right: 9%;
+    color: white;
     cursor: pointer;
+}
+
+.model-open-x:hover, .model-open-delete:hover{
+    color:  #f3d22d;
 }
