--- a/src/styles/views/GalleryPage.module.css
+++ b/src/styles/views/GalleryPage.module.css
@@ -1,33 +1,47 @@
 .galleryPage {
     font-family: 'Roboto', sans-serif;
+    margin-top: 4%;
+    max-width: 88%;
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+    -webkit-column-width: 33%;
+    -moz-column-width: 33%;
+    column-width: 33%;
+    padding: 0 40rem;
+}
+
+.pics{
+    -webkit-transition: all 350ms ease;
+    transition: all 350ms ease;
+    cursor: pointer;
+    margin-bottom: 12px;
+}
+
+.pics:hover{
+    filter: opacity(.4);
+    transform: rotate(-2deg);
+}
+
+.model {
+    width: 100%;
+    height: 100vh;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    text-align: center;
-    max-width: 70%;
+    background-color: black;
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(0);
+    overflow: hidden;
+    z-index: 999;
+    transition: opacity .4s ease, visibility .4s ease, transform .5s ease-in-out;
 }
 
-.img-gallery {
-    width: 80%;
-    margin: 100px auto 50px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 30px;
-}
-
-.img-gallery img {
-    width: 100%;
-    object-fit: cover;
-    cursor: pointer;
-    border-radius: 2%;
-}
-
-.img-gallery img:hover {
-    transform: rotate(-9deg);
-    border-radius: 20px;
-    box-shadow: 0 32px 75px rgba(165, 169, 198, 0.2);
-}
 .model-open {
     width: 100%;
     height: 100vh;
@@ -43,8 +57,8 @@
 }
 
 .model-open-img {
-    width: 90%;
     max-width: 500px;
+    max-height: 800px;
     border-radius: 2%;
 }
 
