--- a/src/styles/components/Navigation.module.css
+++ b/src/styles/components/Navigation.module.css
@@ -10,7 +10,7 @@ nav{
     height: 100%;
 }
 .nav-logo img{
-
+/* transform: translateX(-50%); */
     width: 100%;
     height: 100%;
 }
@@ -43,6 +43,6 @@ nav{
     text-align: end;
 }
 .nav-logo{
-    width: 400px;
+    width: 350px;
     margin-top: 1%;
 }
