--- a/src/styles/views/LoginPage.module.css
+++ b/src/styles/views/LoginPage.module.css
@@ -83,6 +83,9 @@
   .log-btn{
     color: #f3d22d;
   }
+  .log-btn:hover {
+    text-decoration: underline;
+  }
   .field {
     margin-top: 10%;
     font-size: 16px;
