--- a/src/styles/components/Profile.module.css
+++ b/src/styles/components/Profile.module.css
@@ -1,36 +1,118 @@
-.profile {
-position: absolute;
-display: flex;
-flex-direction: column;
-align-items: flex-end;
-right: 1%;
-top: 2%;
-color: white;
+.profile-dropdown {
+  text-align: center;
+  font-family:'Roboto',sans-serif;
 }
 
-.icon-user {
-    font-size: 40px;
-    cursor: pointer;
+.menu-trigger-ico{
+  position: absolute;
+  font-size: 35px;
+  top: 20px;
+  right: 20px;
+  overflow: hidden;
+  cursor: pointer;
+  color: white;
 }
 
-.icon-user:hover {
-    color: #f3d22d;
+.menu-trigger-ico:hover{
+  color: #f3d22d;
 }
 
-.user-menu-wrap{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-start;
-    top: 10px;
-    right: 10px;
-    color: white;
-    max-height: 0px;
-    transition: max-height 0.1s;
+.dropdown-menu::before{
+  content: '';
+  position: absolute;
+  top: -5px;
+  right: 20px;
+  height: 20px;
+  width: 20px;
+  background: #fff;
+  transform: rotate(45deg);
+}
+.dropdown-menu{
+  position: absolute;
+  top: 70px;
+  right: 10px;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 10px 20px;
+  width: 200px;
 }
 
-.user-menu-link{
-    font-size: 28px;
+.dropdown-menu ul li{
+  padding: 10px  0;
+  border-top: 1px solid rgba(0, 0, 0, 0.05);
 }
+
+.dropdown-menu ul li:hover a{
+  color: unset;
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.dropdown-menu.active{
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  transition: 500ms ease;
+}
+
+.dropdown-menu.inactive{
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-20px);
+  transition: 500ms ease;
+}
+
+.dropdownItem-info{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.dropdownItem{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 10px auto;
+}
+
+.dropdownItem-name{
+  width: 100%;
+  text-align: center;
+  font-size: 18px;
+  padding: 10px 0;
+  color: black;
+  line-height: 1.2rem;
+}
+
+.dropdownItem-email{
+  font-size: 14px;
+  color: rgb(85, 85, 85)d5d;
+  font-weight: 400;
+}
+
+.dropdownItem-ico{
+  color: black;
+  font-size: 20px;
+  margin-right: 10px;
+  opacity: 0.7;
+  transition: 500ms;
+}
+
+.dropdownItem-link{
+  max-width: 100px;
+  margin-left: 10px;
+  transition: 500ms;
+  color: black;
+}
+
+
+
+
+
+
+
+
+
+
 
