--- a/src/components/ProfilePage/ProfilePage.module.css
+++ b/src/components/ProfilePage/ProfilePage.module.css
@@ -2,7 +2,7 @@
     margin-top: 2%;
     margin-bottom: 5%;
     width: 300px;
-    height: 350px;
+    height: 400px;
 }
 .profile-wrapper{
     display: flex;
@@ -35,7 +35,11 @@
     padding: 5%;
     margin-bottom: 10%;
     width: 80%;
-    border-bottom: 1px solid rgb(174, 171, 171, 0.1);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.519);
+    border-top: 2px solid rgba(255, 255, 255, 0.519);
+    /* border-left: 2px solid rgba(255, 255, 255, 0.719); */
+    /* border-right: 2px solid rgba(255, 255, 255, 0.719); */
+    border-radius: 8px;
 }
 .user-info-category{
     font-size: 16px;
