--- a/src/components/GalleryPage/GalleryPage.module.css
+++ b/src/components/GalleryPage/GalleryPage.module.css
@@ -8,8 +8,9 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    margin-bottom: 4%;
 }
-
+/* zashto pri mnogo snimki se chupi */
 .pics{
     -webkit-transition: all 350ms ease;
     transition: all 350ms ease;
