--- a/src/components/UploadPage/UploadPage.module.css
+++ b/src/components/UploadPage/UploadPage.module.css
@@ -91,7 +91,14 @@
 .supported-files {
   font-size: 1.1rem;
   font-weight: bold;
+  color: #f1410b;
+  transition: 500ms ease;
+}
+
+.file{
   color: black;
+  font-style: italic;
+  transition: 500ms ease;
 }
 
 
