--- a/src/components/UploadPage/UploadPage.module.css
+++ b/src/components/UploadPage/UploadPage.module.css
@@ -90,15 +90,17 @@
 
 .supported-files {
   font-size: 1.1rem;
-  font-weight: bold;
   color: #f1410b;
+  font-style: italic;
   transition: 500ms ease;
+  font-size: 16px;
 }
 
 .file{
   color: black;
   font-style: italic;
   transition: 500ms ease;
+  font-size: 16px;
 }
 
 
