--- a/src/components/GalleryPage/GalleryPage.module.css
+++ b/src/components/GalleryPage/GalleryPage.module.css
@@ -10,16 +10,22 @@
     text-align: center;
     margin-bottom: 4%;
 }
-/* zashto pri mnogo snimki se chupi */
-.pics{
+
+/* fix css with a lot of photos */
+.pics {
     -webkit-transition: all 350ms ease;
     transition: all 350ms ease;
     cursor: pointer;
 }
 
-.pics:hover{
+.pics:hover {
     filter: opacity(.4);
     transform: rotate(-2deg);
+}
+.tattoo-img {
+    width: 100%;
+    border-radius: 2%;
+    object-fit: cover;
 }
 
 .model {
@@ -79,6 +85,8 @@
     cursor: pointer;
 }
 
-.model-open-x:hover, .model-open-delete:hover{
-    color:  #f3d22d;
+.model-open-x:hover,
+.model-open-delete:hover {
+    color: #f3d22d;
 }
+
