--- a/src/components/ProfilePage/ProfilePage.module.css
+++ b/src/components/ProfilePage/ProfilePage.module.css
@@ -4,6 +4,7 @@
     width: 300px;
     height: 400px;
 }
+
 .profile-wrapper{
     display: flex;
     flex-direction: column;
@@ -12,11 +13,13 @@
     text-align: center;
     border-radius: 20px;
 }
+
 .user-logo-wrapper {
     margin-top: 5%;
     width: 100%;
     border-radius: 20px;
 }
+
 .user-logo{
     font-size: 80px;
     color: white;
@@ -26,6 +29,7 @@
     left: 0%;
     margin-bottom: 10%;
 }
+
 .user-info{
     color: white;
     display: flex;
@@ -41,10 +45,18 @@
     /* border-right: 2px solid rgba(255, 255, 255, 0.719); */
     border-radius: 8px;
 }
+
 .user-info-category{
     font-size: 16px;
 }
+
 .user-info-email, .user-info-name, .user-info-phone, .user-info-reservation {
     color: white;
     font-size: 14px;
+}
+
+.reservation-list{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
