--- a/src/components/GalleryPage/GalleryPage.module.css
+++ b/src/components/GalleryPage/GalleryPage.module.css
@@ -1,31 +1,12 @@
-.galleryPage {
-    font-family: 'Roboto', sans-serif;
-    padding: 4% 0 4% 0;
-    max-width: 40%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20%, 1fr));
-    grid-gap: 1.5%;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 4%;
-}
 
 /* fix css with a lot of photos */
-.pics {
-    -webkit-transition: all 350ms ease;
-    transition: all 350ms ease;
-    cursor: pointer;
-}
 
-.pics:hover {
-    filter: opacity(.4);
-    transform: rotate(-2deg);
-}
-.tattoo-img {
-    width: 100%;
-    border-radius: 2%;
-    object-fit: cover;
+.galleryPage {
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .model {
