--- a/src/components/BookingPage/BookingPage.module.css
+++ b/src/components/BookingPage/BookingPage.module.css
@@ -22,8 +22,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 30px;
     padding: 15px 0 15px 0;
     background-color: white;
+    color: black;
     border-radius: 8px;
     width: 30rem;
     max-width: 100%;
@@ -38,5 +40,6 @@
   .button {
     width: 100px;
   }
+
 
  
