--- a/src/components/BookingPage/BookingPage.module.css
+++ b/src/components/BookingPage/BookingPage.module.css
@@ -6,7 +6,7 @@
   gap: 10px;
   text-align: center;
   margin-top: 4%;
-  margin-bottom: 5%;
+  margin-bottom: 2%;
   font-family: 'Roboto', sans-serif;
   }
 
@@ -17,7 +17,8 @@
     align-items: center;
     text-align: center;
   }
-  .bookingForm{
+
+  .wrapper-span-date{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,6 +31,7 @@
     width: 30rem;
     max-width: 100%;
   }
+
   .span-date {
     display: flex;
     justify-content: center;
@@ -37,8 +39,9 @@
     color: black;
     width: 100%;
   }
+
   .button {
-    width: 100px;
+    width: 30%;
   }
 
 
