--- a/src/components/BookingPage/customCalendar.css
+++ b/src/components/BookingPage/customCalendar.css
@@ -1,167 +1,160 @@
 .react-calendar {
-    font-family: 'Roboto', sans-serif;
-    font-size: 24px;
-    width: 30rem;
-    max-width: 100%;
-    background: whitesmoke;
-    border: 1px solid black;
-    border-radius: 8px;
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.125em;
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+  width: 30rem;
+  max-width: 100%;
+  background: transparent;
+  border: 1px solid black;
+  border-radius: 8px;
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.125em;
+}
+
+.react-calendar--doubleView .react-calendar__viewContainer {
+  display: flex;
+  margin: -0.5em;
+}
+
+.react-calendar--doubleView .react-calendar__viewContainer>* {
+  width: 50%;
+  margin: 0.5em;
+}
+
+.react-calendar,
+.react-calendar *,
+.react-calendar *:before,
+.react-calendar *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.react-calendar button {
+  margin: 0;
+  border: 0;
+  outline: none;
+}
+
+.react-calendar__navigation {
+  display: flex;
+}
+
+.react-calendar__navigation button {
+  min-width: 44px;
+  background: none;
+}
+
+
+.react-calendar__month-view__weekdays {
+  text-align: center;
+  text-transform: uppercase;
+  font: inherit;
+  font-size: 0.75em;
+  font-weight: bold;
+}
+
+.react-calendar__month-view__weekdays__weekday {
+  padding: 0.5em;
+}
+
+.react-calendar__tile {
+  max-width: 100%;
+  padding: 5px 6.6667px;
+  background: none;
+  text-align: center;
+  line-height: 16px;
+  font: inherit;
+  font-size: 0.833em;
+
+}
+
+.react-calendar__tile:enabled:hover,
+.react-calendar__tile:enabled:focus {
+  background-color: transparent;
+}
+
+.react-calendar__tile--now:enabled:hover,
+.react-calendar__tile--now:enabled:focus {
+  background: transparent;
+}
+
+.react-calendar__month-view__days {
+  margin-bottom: 5%;
+}
+
+
+.react-calendar__navigation__label {
+  font-size: 24px;
+}
+
+.react-calendar__navigation__label__labelText {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+}
+
+.react-calendar__navigation {
+  margin-top: 3%;
+  margin-bottom: 5%;
+}
+
+/* navigation buttons */
+.react-calendar__navigation button {
+  margin: 0;
+  padding: 0;
+  min-width: unset;
+  max-width: unset;
+  min-height: unset;
+  max-height: unset;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+/* previous and next arrow */
+.react-calendar__navigation__arrow {
+  color: white;
+}
+
+/* currentDay */
+.react-calendar__tile--active {
+  color: #f3d22d;
+}
+
+/* neighborMonth */
+.react-calendar__month-view__days__day--neighboringMonth {
+  opacity: 0.5;
+}
+
+abbr{
+  text-decoration: none;
+  color: white;
+}
+
+abbr:hover{
+  color: #f3d22d;
+}
+
+.react-calendar__navigation__label:hover{
+  background-color: unset;
+}
+
+.react-calendar__tile{
+  height: 50px;
+  background-color: unset;
+}
+
+.react-calendar__tile:hover{
+  background-color: transparent;
+}
+
+.react-calendar__tile--active{
+  abbr{
+    color: #f3d22d;
   }
-  
-  .react-calendar--doubleView {
-    width: 700px;
-  }
-  
-  .react-calendar--doubleView .react-calendar__viewContainer {
-    display: flex;
-    margin: -0.5em;
-  }
-  
-  .react-calendar--doubleView .react-calendar__viewContainer > * {
-    width: 50%;
-    margin: 0.5em;
-  }
-  
-  .react-calendar,
-  .react-calendar *,
-  .react-calendar *:before,
-  .react-calendar *:after {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  
-  .react-calendar button {
-    margin: 0;
-    border: 0;
-    outline: none;
-  }
-  
-  .react-calendar button:enabled:hover {
-    cursor: pointer;
-  }
-  
-  .react-calendar__navigation {
-    display: flex;
-    height: 0.05%;
-    margin-bottom: 1em;
-  }
-  
-  .react-calendar__navigation button {
-    min-width: 44px;
-    background: none;
-  }
-  
-  .react-calendar__navigation button:disabled {
-    background-color: #f0f0f0;
-  }
-  
-  .react-calendar__navigation button:enabled:hover,
-  .react-calendar__navigation button:enabled:focus {
-    background-color: #f3d22d;
-  }
-  
-  .react-calendar__month-view__weekdays {
-    text-align: center;
-    text-transform: uppercase;
-    font: inherit;
-    font-size: 0.75em;
-    font-weight: bold;
-  }
-  
-  .react-calendar__month-view__weekdays__weekday {
-    padding: 0.5em;
-  }
-  
-  .react-calendar__month-view__weekNumbers .react-calendar__tile {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font: inherit;
-    font-size: 0.75em;
-    font-weight: bold;
-  }
-  
-  .react-calendar__month-view__days__day--weekend {
-    color: black;
-  }
-  
-  .react-calendar__month-view__days__day--neighboringMonth {
-    color: black;
-  }
-  
-  .react-calendar__year-view .react-calendar__tile,
-  .react-calendar__decade-view .react-calendar__tile,
-  .react-calendar__century-view .react-calendar__tile {
-    padding: 2em 0.5em;
-  }
-  
-  .react-calendar__tile {
-    max-width: 100%;
-    padding: 10px 6.6667px;
-    background: none;
-    text-align: center;
-    line-height: 16px;
-    font: inherit;
-    font-size: 0.833em;
-  }
-  
-  .react-calendar__tile:disabled {
-    background-color: #f0f0f0;
-  }
-  
-  .react-calendar__tile:enabled:hover,
-  .react-calendar__tile:enabled:focus {
-    background-color: #f3d22d;
-  }
-  
-  .react-calendar__tile--now {
-    background: #f3d22d;
-  }
-  
-  .react-calendar__tile--now:enabled:hover,
-  .react-calendar__tile--now:enabled:focus {
-    background: #f3d22d;
-  }
-  
-  .react-calendar__tile--hasActive {
-    background: #76baff;
-  }
-  
-  .react-calendar__tile--hasActive:enabled:hover,
-  .react-calendar__tile--hasActive:enabled:focus {
-    background: #a9d4ff;
-  }
-  
-  .react-calendar__tile--active {
-    background: #006edc;
-    color: white;
-  }
-  
-  .react-calendar__tile--active:enabled:hover,
-  .react-calendar__tile--active:enabled:focus {
-    background: #f3d22d;
-  }
-  
-  .react-calendar--selectRange .react-calendar__tile--hover {
-    background-color: #e6e6e6;
-  }
-  .react-calendar__month-view__days {
-    margin-bottom: 5%;
-  }
-  .react-calendar__navigation__label{
-    font-size: 22px;
-    height: 100%;
-  }
-  .react-calendar__navigation{
-    margin-top: 3%;
-  }
-  .react-calendar__month-view__days__day{
-    background-color: whitesmoke;
-  }
-  .react-calendar__month-view__weekdays__weekday{
-    color: black;
-  }
- 
+}
