--- a/src/components/GalleryPage/GalleryPage.module.css
+++ b/src/components/GalleryPage/GalleryPage.module.css
@@ -48,26 +48,41 @@
     border-radius: 2%;
 }
 
-.model-open-x {
+
+.model-open-actions{
     position: absolute;
     top: 5.3%;
-    right: 5%;
+    right: 13%;
     font-size: 26px;
     color: white;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 90%;
 }
 
-.model-open-delete {
+/* .model-open-delete {
     font-size: 26px;
     position: absolute;
     top: 5.3%;
     right: 9%;
     color: white;
     cursor: pointer;
-}
+} */
+/* .model-open-x {
+    position: absolute;
+    top: 5.3%;
+    right: 5%;
+    font-size: 26px;
+    color: white;
+    cursor: pointer;
+} */
 
 .model-open-x:hover,
-.model-open-delete:hover {
+.model-open-delete:hover,
+.model-open-comments:hover,
+.actions-like:hover {
     color: #f3d22d;
 }
 
