--- a/src/components/BookingPage/BookingPage.module.css
+++ b/src/components/BookingPage/BookingPage.module.css
@@ -8,41 +8,68 @@
   margin-top: 4%;
   margin-bottom: 2%;
   font-family: 'Roboto', sans-serif;
-  }
+}
 
-  .model {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
+.model {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 
-  .wrapper-span-date{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-    padding: 15px 0 15px 0;
-    background-color: white;
-    color: black;
-    border-radius: 8px;
-    width: 30rem;
-    max-width: 100%;
-  }
+.model button:hover {
+  background: #f3d22d;
+}
 
-  .span-date {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    width: 100%;
-  }
+.model button,
+.model input,
+.model label {
+  border: none;
+  box-sizing: border-box;
+  display: block;
+  margin-top: 10px;
+  outline: none;
+  padding: 0;
+}
 
-  .button {
-    width: 30%;
-  }
+.model button {
+  border-radius: 20px;
+  cursor: pointer;
+  font-family: Roboto, sans-serif;
+  font-size: 15px;
+  font-weight: 900;
+  height: 40px;
+  transition: .5s;
+  margin-top: 20px;
+}
 
+.wrapper-span-date {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  padding: 15px 0 15px 0;
+  background-color: white;
+  color: black;
+  border-radius: 8px;
+  width: 30rem;
+  max-width: 100%;
+}
 
- 
+.span-date {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  width: 100%;
+}
+
+.button {
+  width: 30%;
+}
+
+.bookingPage abbr{
+  cursor: pointer;
+}
