--- a/src/components/CommentsPage/CommentsPage.module.css
+++ b/src/components/CommentsPage/CommentsPage.module.css
@@ -7,6 +7,7 @@
     gap: 35px;
     margin-top: 2%;
     margin-bottom: 2%;
+    font-family: 'Roboto', sans-serif;
 }
 
 .tattoo-img {
@@ -14,6 +15,51 @@
     height: 50vh;
     border-radius: 2%;
     object-fit: cover;
+}
+
+.commentForm button, .commentForm input, .commentForm label{
+    border: none;
+  box-sizing: border-box;
+  display: block;
+  margin-top: 10px;
+  outline: none;
+  padding: 0;
+  width: 100%;
+}
+
+.commentForm button{
+    background: #fff;
+  border-radius: 20px;
+  cursor: pointer;
+  font-family: Roboto,sans-serif;
+  font-size: 15px;
+  font-weight: 900;
+  height: 40px;
+  margin-top: 20px;
+  transition: .5s;
+}
+
+.commentForm button, .commentForm input, .commentForm label{
+    border: none;
+  box-sizing: border-box;
+  display: block;
+  margin-top: 10px;
+  outline: none;
+  padding: 0;
+  width: 100%;
+}
+
+.commentForm label {
+    margin-bottom: 4px;
+    cursor: pointer;
+}
+
+.commentForm button {
+    margin-top: 10%;
+}
+
+.commentForm button:hover{
+    background: #f3d22d;
 }
 
 .wrap{
@@ -31,6 +77,7 @@
 }
 
 .comment-text{
+    font-family: 'Roboto', sans-serif;
     width: 250px;
     height: 150px;
     border-radius: 8px;
