github link and icon added.

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -15,7 +15,7 @@
     margin-bottom: 0.7%;
 }
 
-.instagram-icon, .facebook-icon, .google-icon {
+.instagram-icon, .facebook-icon, .google-icon, .github-icon {
     font-size: 35px;
 }
 
