--- a/src/components/BookingPage/Calendar.css
+++ b/src/components/BookingPage/Calendar.css
@@ -95,6 +95,10 @@
   color: white;
 }
 
+.react-calendar__navigation__label__labelText:hover{
+  color: #f3d22d;
+}
+
 .react-calendar__navigation {
   margin-top: 3%;
   margin-bottom: 5%;
@@ -119,6 +123,11 @@
 /* previous and next arrow */
 .react-calendar__navigation__arrow {
   color: white;
+  cursor: pointer;
+}
+
+.react-calendar__navigation__arrow:hover {
+  color: #f3d22d;
 }
 
 /* currentDay */
