--- a/src/components/ProfilePage/ProfilePage.module.css
+++ b/src/components/ProfilePage/ProfilePage.module.css
@@ -1,11 +1,11 @@
-.profilePage{
+.profilePage {
     margin-top: 2%;
     margin-bottom: 15%;
     width: 300px;
     height: 400px;
 }
 
-.profile-wrapper{
+.profile-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,7 +20,7 @@
     border-radius: 20px;
 }
 
-.user-logo{
+.user-logo {
     font-size: 80px;
     color: white;
     position: relative;
@@ -30,7 +30,7 @@
     margin-bottom: 10%;
 }
 
-.user-info{
+.user-info {
     color: white;
     display: flex;
     flex-direction: row;
@@ -46,26 +46,29 @@
     border-radius: 8px;
 }
 
-.user-info-category{
+.user-info-category {
     font-size: 16px;
 }
 
-.user-info-email, .user-info-name, .user-info-phone, .user-info-reservation {
+.user-info-email,
+.user-info-name,
+.user-info-phone,
+.user-info-reservation {
     color: white;
     font-size: 14px;
 }
 
-.reservation-list{
+.reservation-list {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
-.span-reservation{
+.span-reservation {
     font-size: 14px;
 }
 
-.user-info-reservation{
+.user-info-reservation {
     color: white;
     display: flex;
     flex-direction: column;
@@ -75,9 +78,35 @@
     margin-bottom: 10%;
     gap: 20px;
     width: 80%;
+    border-radius: 8px;
     border-bottom: 2px solid rgba(255, 255, 255, 0.519);
     border-top: 2px solid rgba(255, 255, 255, 0.519);
-    /* border-left: 2px solid rgba(255, 255, 255, 0.719); */
-    /* border-right: 2px solid rgba(255, 255, 255, 0.719); */
+}
+
+.span-user-info-reservation {
+    border-bottom: 2px solid rgba(255, 255, 255, 0.519);
+    border-top: 2px solid rgba(255, 255, 255, 0.519);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5%;
+    margin-bottom: 10%;
+    gap: 20px;
+    width: 80%;
+    border-radius: 8px;
+}
+
+.user-info-reservation-p{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5%;
+    margin-bottom: 10%;
+    gap: 20px;
+    width: 80%;
     border-radius: 8px;
 }
