--- a/src/components/RegisterPage/RegisterPage.module.css
+++ b/src/components/RegisterPage/RegisterPage.module.css
@@ -11,7 +11,6 @@
   text-align: center;
   position: relative;
   width: 350px;
-  height: 700px;
   border-radius: 20px;
   padding: 40px;
   box-sizing: border-box;
@@ -29,10 +28,6 @@
   border: none;
   outline: none;
   box-sizing: border-box;
-}
-
-.registerForm input:hover {
-  background: #f3d22d;
 }
 
 .registerForm label {
@@ -72,7 +67,7 @@
   background: #f3d22d;
 }
 
-.button{
+.registerForm .button{
   margin-top: 15%;
 }
 
@@ -90,6 +85,13 @@
   font-size: 16px;
 }
 
-.registerForm .validationWarning{
-  color:#f3d22d;
+.registerForm .warning {
+  border: 3px solid rgb(224, 71, 71);
+}
+
+.registerForm .validation-message{
+  margin-top: 10px;
+  color: rgb(224, 71, 71);
+  margin-bottom: 5%;
+  font-size: 13px;
 }
