--- a/src/components/LoginPage/LoginPage.module.css
+++ b/src/components/LoginPage/LoginPage.module.css
@@ -8,94 +8,96 @@
 }
 
 .loginForm {
-    display: inline-block;
-    text-align: center;
-    position: relative;
-    width: 350px;
-    height: 450px;
-    border-radius: 20px;
-    padding: 40px;
-    box-sizing: border-box;
-    background: black;
-    justify-content: center;
-  }
-  
-  .inputs {
-    text-align: left;
-    margin-top: 30px;
-  }
-  
-  .loginForm label,
-  .loginForm input,
-  .loginForm button {
-    display: block;
-    width: 100%;
-    padding: 0;
-    margin-top: 10px;
-    border: none;
-    outline: none;
-    box-sizing: border-box;
-  }
-  
-  .loginForm label {
-    margin-bottom: 4px;
-    cursor: pointer;
-  }
-  
-  .loginForm label:nth-of-type(2) {
-    margin-top: 12px;
-  }
-  
-  .loginForm input::placeholder {
-    color: gray;
-  }
-  
-  .loginForm input {
-    background: #ecf0f3;
-    padding: 10px;
-    padding-left: 20px;
-    height: 50px;
-    font-size: 14px;
-    border-radius: 50px;
-  }
-  
-  .loginForm input:hover {
-    background: #f3d22d;
-  }
-  
-  .loginForm button {
-    font-family:'Roboto',sans-serif;
-    margin-top: 20px;
-    font-size: 15px;
-    background: white;
-    height: 40px;
-    border-radius: 20px;
-    cursor: pointer;
-    font-weight: 900;
-    transition: 0.5s;
-  }
-  
-  .loginForm button:hover {
-    background: #f3d22d;
-  }
+  display: inline-block;
+  text-align: center;
+  position: relative;
+  width: 350px;
+  border-radius: 20px;
+  padding: 40px;
+  box-sizing: border-box;
+  background: black;
+  justify-content: center;
+}
 
-  .button{
-    margin-top: 15%;
-  }
+.inputs {
+  text-align: left;
+  margin-top: 30px;
+}
 
-  .log-btn{
-    color: #f3d22d;
-  }
+.loginForm label,
+.loginForm input,
+.loginForm button {
+  display: block;
+  width: 100%;
+  padding: 0;
+  margin-top: 10px;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+}
 
-  .log-btn:hover {
-    text-decoration: underline;
-  }
-  
-  .field {
-    margin-top: 10%;
-    font-size: 16px;
-  }
+.loginForm label {
+  margin-bottom: 4px;
+  cursor: pointer;
+}
 
-  .loginForm .validationWarning{
-    color:#f3d22d;
-  }
+.loginForm label:nth-of-type(2) {
+  margin-top: 12px;
+}
+
+.loginForm input::placeholder {
+  color: gray;
+}
+
+.loginForm input {
+  background: #ecf0f3;
+  padding: 10px;
+  padding-left: 20px;
+  height: 50px;
+  font-size: 14px;
+  border-radius: 50px;
+}
+
+.loginForm button {
+  font-family: 'Roboto', sans-serif;
+  margin-top: 20px;
+  font-size: 15px;
+  background: white;
+  height: 40px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-weight: 900;
+  transition: 0.5s;
+}
+
+.loginForm button:hover {
+  background: #f3d22d;
+}
+
+.button {
+  margin-top: 15%;
+}
+
+.log-btn {
+  color: #f3d22d;
+}
+
+.log-btn:hover {
+  text-decoration: underline;
+}
+
+.field {
+  margin-top: 10%;
+  font-size: 16px;
+}
+
+.loginForm .warning {
+  border: 3px solid rgb(224, 71, 71);
+}
+
+.loginForm .validation-message {
+  margin-top: 10px;
+  color: rgb(224, 71, 71);
+  margin-bottom: 5%;
+  font-size: 13px;
+}
