--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -28,3 +28,73 @@
     display: block;
     font-size: 15px;
 }
+
+@media screen and (max-width: 480px) and (min-width: 360px) {
+    .links-footer {
+        gap: 5%;
+        margin-bottom: 3%;
+    }
+}
+
+@media screen and (max-width: 600px) and (min-width: 481px) {
+    .links-footer {
+        gap: 3%;
+        margin-bottom: 3%;
+    }
+}
+
+@media screen and (max-width: 768px) and (min-width: 601px) {
+    .links-footer {
+        gap: 3%;
+        margin-bottom: 3%;
+    }
+}
+
+@media screen and (max-width: 900px) and (min-width: 769px) {
+    .links-footer {
+        gap: 3%;
+        margin-bottom: 3%;
+    }
+}
+
+@media screen and (max-width: 1024px) and (min-width: 901px) {
+    .links-footer {
+        gap: 3%;
+        margin-bottom: 3%;
+    }
+}
+
+@media screen and (max-width: 1200px) and (min-width: 1025px) {
+    .links-footer {
+        gap: 2%;
+        margin-bottom: 2%;
+    }
+}
+
+@media screen and (max-width: 1440px) and (min-width: 1201px) {
+    .links-footer {
+        gap: 2%;
+        margin-bottom: 2%;
+    }
+}
+
+@media screen and (max-width: 1600px) and (min-width: 1441px) {
+    .links-footer {
+        gap: 1.5%;
+        margin-bottom: 1.5%;
+    }
+}
+
+@media screen and (max-width: 1920px) and (min-width: 1601px) {
+    .links-footer {
+        gap: 1.5%;
+        margin-bottom: 1%;
+    }
+}
+
+@media screen and (max-width: 2560px) and (min-width: 1921px) {
+    .links-footer {
+        gap: 1.5%;
+        margin-bottom: 1%;
+    }
+}
