--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,4 +1,4 @@
-nav{
+nav {
     display: flex;
     flex-direction: row;
     text-align: center;
@@ -6,18 +6,13 @@ nav{
     align-items: center;
 }
 
-.nav-logo{
+.nav-logo img {
+    /* transform: translateX(-50%); */
     width: 100%;
     height: 100%;
 }
 
-.nav-logo img{
-/* transform: translateX(-50%); */
-    width: 100%;
-    height: 100%;
-}
-
-.nav-bar{
+.nav-bar {
     display: flex;
     flex-direction: row;
     gap: 4%;
@@ -28,7 +23,7 @@ nav{
     text-align: center;
 }
 
-.nav-link{
+.nav-link {
     font-size: 28px;
 }
 
@@ -37,21 +32,36 @@ nav{
 
 }
 
-.navigation{
+.navigation {
     margin-top: 4%;
     width: 150px;
 }
 
-.navigation>a{
+.navigation>a {
     display: block;
     width: 150px;
 }
 
-.home{
+.home {
     text-align: end;
 }
 
-.nav-logo{
+.nav-logo {
     width: 350px;
     margin-top: 1%;
+}
+
+
+@media screen and (max-width: 1024px) {
+    .upload,
+    .gallery,
+    .contact,
+    .home,
+    .booking {
+        display: none;
+    }
+
+    .nav-logo img {
+        width: 200px;
+    }
 }
