--- a/src/components/GalleryPage/GalleryPage.module.css
+++ b/src/components/GalleryPage/GalleryPage.module.css
@@ -1,6 +1,3 @@
-
-/* fix css with a lot of photos */
-
 .galleryPage {
     font-family: 'Roboto', sans-serif;
     display: flex;
@@ -78,3 +75,74 @@
 .dislike:hover {
     color: #f3d22d;
 }
+
+@media screen and (max-width: 480px) and (min-width: 360px) {
+    .galleryPage{
+        gap: 60px;
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 600px) and (min-width: 481px) {
+    .galleryPage{
+        gap: 60px;
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 768px) and (min-width: 601px) {
+    .galleryPage{
+        gap: 60px;
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 900px) and (min-width: 769px) {
+    .galleryPage{
+        gap: 60px;
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 1024px) and (min-width: 901px) {
+    .galleryPage{
+        gap: 60px;
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 1200px) and (min-width: 1025px) {
+    .galleryPage{
+        gap: 60px;
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 1440px) and (min-width: 1201px) {
+    .galleryPage{
+        gap: 60px;
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 1600px) and (min-width: 1441px) {
+    .galleryPage{
+        gap: 60px;
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 1920px) and (min-width: 1601px) {
+    .galleryPage{
+        gap: 60px;
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 2560px) and (min-width: 1921px) {
+    .galleryPage{
+        gap: 60px;
+        margin-top: 40px;
+    }
+}
+
